# machine-uid

./: .travis.yml  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: rust.yml
src/: lib.rs  win.cpp
tests/: tests.rs
tests/platform/: Debian-9.sh  Fedora-28.sh  FreeBSD-10.sh  README.md
