[package]
name = "machine-uid"
version = "0.5.3"
authors = ["Hanaasagi <ambiguous404@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/Hanaasagi/machine-uid"
description = """
Get os native machine id without root permission.
"""

[dependencies]

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[target.'cfg(target_os = "illumos")'.dependencies]
libc = "0.2.155"
