[package]
name = "machine-uid"
version = "0.5.4"
authors = ["Hanaasagi <ambiguous404@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/Hanaasagi/machine-uid"
description = """
Get os native machine id without root permission.
"""

[dependencies]

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_System_Threading",
    "Win32_System_Registry",
] }
windows-registry = "0.6.1"

[target.'cfg(target_os = "illumos")'.dependencies]
libc = "0.2.177"
